Add drag-and-drop to unified and section packing lists

--- a/PackingHelper/Info.plist
+++ b/PackingHelper/Info.plist
@@ -11,5 +11,32 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Packing Item</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.packinghelper.item</string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Packing List</string>
+			<key>UTTypeIdentifier</key>
+			<string>com.packinghelper.list</string>
+			<key>UTTypeTagSpecification</key>
+			<dict/>
+		</dict>
+	</array>
 </dict>
 </plist>
