--- a/PackingHelper/Info.plist
+++ b/PackingHelper/Info.plist
@@ -11,6 +11,8 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+	<key>REVENUECAT_API_KEY</key>
+	<string>$(REVENUECAT_API_KEY)</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
